--- a/multi-hls-player/package.json
+++ b/multi-hls-player/package.json
@@ -21,6 +21,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.3"
